NTR - Apply sortField "name" to language switch select

--- a/Resources/administration/src/app/component/structure/sw-language-switch/sw-language-switch.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-language-switch/sw-language-switch.html.twig
@@ -45,6 +45,7 @@
                     required
                     :showSearch="false"
                     v-model="languageId"
+                    sortField="name"
                     :store="languageStore">
             </sw-select>
         {% endblock %}
