--- a/Resources/administration/src/module/sw-order/component/sw-order-delivery-metadata/sw-order-delivery-metadata.less
+++ b/Resources/administration/src/module/sw-order/component/sw-order-delivery-metadata/sw-order-delivery-metadata.less
@@ -4,8 +4,15 @@
     }
     .sw-description-list {
         dt,dd {
-            padding: 0 0 28px 0;
             border-color: transparent;
+        }
+
+        dd {
+            padding: 0 0 28px 0;
+        }
+
+        dt {
+            padding: 0;
         }
     }
 
