--- a/Resources/administration/src/module/sw-order/component/sw-order-state-select/sw-order-state-select.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-state-select/sw-order-state-select.scss
@@ -7,6 +7,8 @@ $sw-order-state-select-rounded-list-background: $color-white;
 
 .sw-order-state-select{
 
+  padding-bottom: 21px;
+
   .sw-order-state-select__field {
     margin-bottom: 0;
     .sw-field__select {
