NEXT-1894 - Add random color for avatar

--- a/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
@@ -14,8 +14,7 @@
                                     <sw-avatar :color="moduleColor"
                                                size="80px"
                                                :firstName="user.firstName"
-                                               :lastName="user.lastName"
-                                               :isLoading="isLoading">
+                                               :lastName="user.lastName">
                                     </sw-avatar>
                                 {% endblock %}
 
